--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,42 @@ h1 {
     background-size: cover;
     background-color: #222222;
     padding: 0em;
-    height: 45em;
+    height: 34em;
+}
+
+.state {
+    width: 19em;
+    display: inline-block;
+}
+
+#maparea {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 77em;
+}
+
+
+#questionbox,
+#score,
+#questionlist,
+#questioncount {
+    color: white;
+}
+
+#questionbox {
+    text-align: center;
+    height: 4em;
+    background: rgba(0, 0, 0, 0.5);
+    margin-top: 17.4em;
+}
+#score {
+    text-align: left;
+}
+#questionlist {
+
+}
+#questioncount {
+    text-align: right
 }
 
 
