--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,10 @@ time, mark, audio, video {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     font-family: sans-serif;
+    color: white;
+}
+body {
+    background-color: #222222;
 }
 
 #header {
@@ -39,9 +43,8 @@ h1 {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-color: #222222;
     padding: 0em;
-    height: 34em;
+    height: 27em;
 }
 
 .state {
@@ -56,28 +59,20 @@ h1 {
 }
 
 
-#questionbox,
-#score,
-#questionlist,
-#questioncount {
-    color: white;
-}
+
 
 #questionbox {
-    text-align: center;
     height: 4em;
     background: rgba(0, 0, 0, 0.5);
-    margin-top: 17.4em;
-}
-#score {
-    text-align: left;
-}
-#questionlist {
 
 }
-#questioncount {
-    text-align: right
+
+#statsquestionslist > li {
+    font-size: 1.2em;
+    display: inline-block;
+    margin: 1.2em 4.8em;
 }
+
 
 
 
