--- a/styles/style.css
+++ b/styles/style.css
@@ -59,12 +59,10 @@ h1 {
 }
 
 
-
-
-#questionbox {
+#questionbox,
+.mefooter {
     height: 4em;
     background: rgba(0, 0, 0, 0.5);
-
 }
 
 #statsquestionslist > li {
@@ -72,6 +70,25 @@ h1 {
     display: inline-block;
     margin: 1.2em 4.8em;
 }
+
+#statsquestionslist,
+.mefooter {
+    text-align: center;
+}
+
+#choices {
+    height: 12em;
+}
+
+.mefooter > li {
+    font-size: 1em;
+    display: inline-block;
+    margin: 1.2em 4.8em;
+    text-align: center;
+    font-weight: 100;
+}
+
+
 
 
 
