--- a/styles/style.css
+++ b/styles/style.css
@@ -69,7 +69,7 @@ h1 {
     background: rgba(0, 0, 0, 0.5);
 }
 
-#statsquestionslist {
+#questiontext {
     display: none;  /** toggle on in jQuery **/
 }
 
@@ -79,7 +79,7 @@ h1 {
     margin: 1.2em 4.8em;
 }
 
-#statsquestionslist,
+#questiontext,
 .mefooter {
     text-align: center;
 }
