--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,8 @@ h2 {
 }
 
 #overlaycorrect,
-#overlayincorrect {
+#overlayincorrect,
+#overlayscore {
     background: rgba(0, 0, 0);
     background-image: linear-gradient(to right, rgba(0,0,0,0.2), rgba(0,0,0,0.75), rgba(0,0,0,0.2));
     display: none; /** toggle visibilty with jQuery **/
