--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,12 @@ time, mark, audio, video {
 	border: 0;
 }
 
+@media only screen and (max-width: 1024px) {
+    #statsbox {
+        height: 8em;
+    }
+}
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -50,6 +56,9 @@ h1 {
 h2 {
     font-size: 6em;
 }
+#finalscore {
+    font-size: 1em;
+}
 
 #overlaycorrect,
 #overlayincorrect,
@@ -74,7 +83,6 @@ h2 {
     margin-right: auto;
     max-width: 77em;
 }
-
 
 #statsbox {
     height: 4em;
@@ -106,38 +114,26 @@ h2 {
 }
 
 #clicktobegin,
+#newgame,
 #multiplechoices > li {
     height: 4em;
     width: 11em;
-    display: none; /** toggle to inlin-block in JS **/
+    display: none; /** toggle to inline-block in JS **/
     text-align: center;
     background: #253950;
     border-radius: 3px;
     margin: 1em;
     font-size: 1em;
-    line-height: 100px;
     border: 1px solid black;
     vertical-align: middle;
-    line-height: normal;
+    line-height: 4em;
     font-size: x-large;
 }
 
 #clicktobegin:hover,
+#newgame,
 #multiplechoices > li:hover{
     border: 1px solid #35421e;
-    cursor: pointer;
-}
-
-button {
-    border-radius: 3px;
-    background: #516173;
-    text-decoration: none;
-    border: 1px solid #000000;
-    display: none;  /** toggle visibility in jQuery **/
-}
-
-button:hover {
-    background: #74818F;
     cursor: pointer;
 }
 
@@ -145,15 +141,23 @@ span,
 #multiplechoices > li {
     display: inline-block;
     vertical-align: middle;
-    line-height: normal;
+    line-height: 4em;
     font-size: x-large;
 }
 
-/**.instructions {
-    font-size: 1em;
-    display: none; /** toggle on in jQuery
-}**/
+span {
+    line-height: 2.5em;
+}
 
+#score {
+    width:11%;
+}
+#questiontext {
+    width:71%;
+}
+#questioncount {
+    width:17%;
+}
 
 .mefooter > li {
     font-size: 1em;
