--- a/styles/style.css
+++ b/styles/style.css
@@ -16,10 +16,11 @@ time, mark, audio, video {
 	border: 0;
 }
 
-@media only screen and (max-width: 1024px) {
-
-    #wrapper {
-        background-color: pink;
+@media only screen and (max-width: 500px) {
+    #score,
+    #questiontext,
+    #questioncount{
+        
     }
 }
 
@@ -76,7 +77,7 @@ h2 {
 }
 
 #statsboxinfo {
-    height: 4%;
+    height: 8%;
     background: rgba(0, 0, 0, 0.5);
 }
 
@@ -138,13 +139,15 @@ h2 {
 
 #score {
     width:11%;
+    white-space: nowrap;
 }
 #questiontext {
     width:71%;
+    white-space: nowrap;
 }
 #questioncount {
     width:17%;
-    
+    white-space: nowrap;
 }
 
 #score,
