--- a/styles/style.css
+++ b/styles/style.css
@@ -129,7 +129,8 @@ button,
 }
 
 .statsboxinfo{
-    font-size: x-large;  
+    font-size: x-large;
+    padding: 10px;
 }
 button,
 .multiplechoices > li {
