--- a/styles/style.css
+++ b/styles/style.css
@@ -142,7 +142,7 @@ button:hover{
     border-bottom: 1px solid #35421e;
 }
 
-@media (max-width: 900px){
+@media screen and (max-width: 1925px){
     button {
         height: 100%;
         width: 100%;
