--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,7 @@ body {
     color: white;
     background: rgba(0, 0, 0, 0.5);
     padding: 20px;
+    width: 100%;
 }
 .score {
     float: left;
@@ -142,7 +143,7 @@ button:hover{
     border-bottom: 1px solid #35421e;
 }
 
-@media screen and (max-width: 900px){
+@media screen and (max-width: 1280px){
     button {
         height: 100%;
         width: 100%;
