--- a/styles/style.css
+++ b/styles/style.css
@@ -80,14 +80,13 @@ h2 {
 }
 
 .statsboxinfo {
-    height: 8%;
     background: rgba(0, 0, 0, 0.5);
 }
 .progress_wrap {
     position: relative;
     width: 100%;
     height: 5px;
-    background-color: black;
+    background-color: #1d2f15;
 }
 .progress_bar {
     position: absolute;
@@ -107,7 +106,6 @@ h2 {
     text-align: center;
 }
 .choices {
-    height: 19%;
     text-align: center;
 }
 
@@ -117,7 +115,7 @@ button {
     display: none;
     background: #253950;
     border-radius: 2px;
-    margin: 1em;
+    margin: 15px;
     border: 1px solid black;
     font-size: x-large;
 }
@@ -125,16 +123,12 @@ button:hover{
     border: 1px solid #35421e;
     cursor: pointer;
 }
-.statsboxinfo{
-    padding: 10px;
-}
-.questiontext {
-    /* Do I need any styles? */
+.question {
+    padding: 15px;
 }
 .smallfooter > li {
-    font-size: 1em;
     display: inline-block;
-    margin: 0.5em 4.8em;
+    margin: 0 50px;
     text-align: center;
 
 }
@@ -147,14 +141,13 @@ button:hover{
     button {
         height: 100%;
         width: 100%;
-        
+        margin: 5px 0;
         background-color: pink;
     }
     .statsboxinfo {
         font-size: x-large;
     }
 }
-/** blah **/
 
 
 
