--- a/styles/style.css
+++ b/styles/style.css
@@ -57,8 +57,7 @@ h1 {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    padding: 0em;
-    height: 27em;
+    height: 512px;
 }
 
 h2 {
@@ -146,6 +145,9 @@ button:hover{
     }
     .statsboxinfo {
         font-size: x-large;
+    }
+    .wrapper {
+        height: 256px;
     }
 }
 
