--- a/styles/style.css
+++ b/styles/style.css
@@ -146,9 +146,16 @@ button:hover{
     .statsboxinfo {
         font-size: x-large;
     }
-    .wrapper {
-        height: 256px;
-    }
+    /*.wrapper {
+        height: 700px;
+    }*/
+}
+@media screen and (max-width: 720px) {
+     button {
+         width: 50%;
+         height: 64px;
+         background-color: yellow;
+     }
 }
 
 
