--- a/styles/style.css
+++ b/styles/style.css
@@ -154,7 +154,7 @@ button:hover{
          background-color: yellow;
      }
      .wrapper {
-         width: 512px;
+         height: 512px;
      }
 }
 
