--- a/styles/style.css
+++ b/styles/style.css
@@ -107,7 +107,6 @@ h2 {
 .choices {
     text-align: center;
 }
-
 button {
     height: 65px;
     width: 200px;
@@ -135,13 +134,18 @@ button:hover{
     border-top: 1px solid #35421e;
     border-bottom: 1px solid #35421e;
 }
-
+.score_question {
+        margin-top: 390px;
+}
 @media screen and (max-width: 1280px){
     .statsboxinfo {
         font-size: x-large;
     }
     .wrapper {
         height: 320px;
+    }
+    .score_question {
+        margin-top: 200px;
     }
 }
 @media screen and (max-width: 720px) {
@@ -162,6 +166,9 @@ button:hover{
     }
     .header {
         padding: 10px;
+    }
+    .score_question {
+        margin-top: 160px;
     }
 }
 
