--- a/styles/style.css
+++ b/styles/style.css
@@ -136,7 +136,7 @@ li {
         height: 320px;
     }
 }
-@media screen and (max-width: 720px) {
+/*@media screen and (max-width: 720px) {
      button {
          width: 50%;
          height: 64px;
@@ -144,7 +144,7 @@ li {
      .wrapper {
          height: 360px;
      }
-}
+}*/
 @media screen and (max-width: 720px) {
     .wrapper {
         height: 256px;
