--- a/styles/style.css
+++ b/styles/style.css
@@ -24,36 +24,38 @@ i {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: 'Amatic SC', cursive;/*
+    font-family: 'Playfair Display', serif;*/
     color: white;
 }
-body {
-    background-color: #222222;
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
 .header {
     text-align: center;
-    color: white;
-    background: rgba(0, 0, 0, 0.5);
-    padding: 20px;
     width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .questioncount {
     float: right;
 }
 h1 {
     font-weight: 100;
+    font-size: 9em;
 }
 h2 {
     font-size: 2em;
     padding: 42px 0;
 }
-.wrapper {
+body {
     background-image: url("../images/Glacier_National_Park_sunset.jpg");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
-    height: 512px;
 }
 .finalscore {
     font-size: 1em;
@@ -99,14 +101,13 @@ button {
     height: 65px;
     width: 200px;
     display: none;
-    background: #253950;
-    border-radius: 2px;
+    background: none;
     margin: 15px;
-    border: 1px solid black;
+    border: 2px solid #fff;
     font-size: x-large;
 }
 button:hover{
-    border: 1px solid #35421e;
+    border: 4px solid #fff;
     cursor: pointer;
 }
 .question {
@@ -117,8 +118,6 @@ li {
     margin: 0 50px;
 }
 .smallfooter {
-    border-top: 1px solid #35421e;
-    border-bottom: 1px solid #35421e;
 }
 .score_question {
     padding: 0 60px;
