--- a/styles/style.css
+++ b/styles/style.css
@@ -90,9 +90,11 @@ body {
     height: 100%;
     background-color: #35421e;
 }
-.smallfooter {
-    height: 2%;
-    background: rgba(0, 0, 0, 0.5);
+footer {
+    width: 100%;
+    position: absolute;
+    bottom: 40px;
+    text-align: center;
 }
 .statsboxinfo {
     display: none;  /** toggle on in jQuery **/
