--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,7 @@ i {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.15);
 }
 .ui_data {
     width: 100%;
@@ -43,6 +44,7 @@ i {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.15);
 }
 .questioncount {
     float: right;
@@ -52,13 +54,14 @@ h1 {
     font-size: 6em;
 }
 h2 {
-    font-size: 2em;
-    padding: 42px 0;
+    font-size: 3em;
 }
-body {
+html {
+    box-sizing: border-box;
     background-image: url("../images/Glacier_National_Park_sunset.jpg");
+    background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-attachment: fixed;
 }
 .score_question,
 .statsboxinfo {
@@ -117,7 +120,7 @@ button {
     font-family: 'Jacques Francois', serif;
 }
 button:hover{
-    border: 4px solid #fff;
+    border: 3px solid #fff;
     cursor: pointer;
 }
 .question {
@@ -136,23 +139,6 @@ li {
 .score {
     font-size: large;
 }
-@media screen and (max-width: 1280px){
-    .statsboxinfo {
-        font-size: x-large;
-    }
-    .wrapper {
-        height: 320px;
-    }
-}
-/*@media screen and (max-width: 720px) {
-     button {
-         width: 50%;
-         height: 64px;
-     }
-     .wrapper {
-         height: 360px;
-     }
-}*/
 @media screen and (max-width: 720px) {
     .wrapper {
         height: 256px;
@@ -168,6 +154,9 @@ li {
     }
     li {
         margin: 0;
+    }
+    h1 {
+        font-size: 4em;
     }
 }
 
