--- a/styles/style.css
+++ b/styles/style.css
@@ -84,14 +84,13 @@ html {
 .progress_wrap {
     position: relative;
     width: 100%;
-    height: 5px;
-    background-color: #1d2f15;
+    height: 2px;
 }
 .progress_bar {
     position: absolute;
     width: 0%;
     height: 100%;
-    background-color: #35421e;
+    background-color: #fff;
 }
 footer {
     width: 100%;
