--- a/styles/style.css
+++ b/styles/style.css
@@ -63,8 +63,23 @@ h2 {
     background-repeat: no-repeat;
     background-attachment: fixed;
 }*/
-html {
+/*html {
     background: url("../images/Glacier_National_Park_sunset.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}*/
+body:before {
+    content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url("../images/Glacier_National_Park_sunset.jpg") no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
